@@ -12,8 +12,8 @@
 			ed.addCommand('mceEmotion', function() {
 				ed.windowManager.open({
 					file : url + '/emotions.htm',
-					width : 250,
-					height : 160,
+					width : 250 + ed.getLang('emotions.delta_width', 0),
+					height : 160 + ed.getLang('emotions.delta_height', 0),
 					inline : 1
 				}, {
 					plugin_url : url
