@@ -22,6 +22,8 @@ Version 3.0b1 (2007-11-xx)
 	Fixed bug where dialogs like paste from word was huge on Firefox.
 	Fixed bug with media plugin not working with windows media objects.
 	Fixed bug where a forever loop was created if multiple instances where submitted using form.submit.
+	Fixed bug with editing a table produce error in IE when inlinepopups where used.
+	Fixed bug where the style plugin generated ugly looking style information in IE.
 	Fixed so the body of the editor area has the mceContentBody class just like the 2.x branch. 
 	Fixed so the media icon gets active when a media element is selected.
 Version 3.0a3 (2007-11-13)
